--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
 </head>
 <body>
   <h1>hi!</h1>
+  <!-- modify this form HTML and place wherever you want your form -->
+
+  <form action="https://formspree.io/myyeloaw" method="POST">
+    <label>
+      Your email:
+      <input type="text" name="_replyto">
+    </label>
+    <label>
+      Your message:
+      <textarea name="message"></textarea>
+    </label>
+
+    <!-- your other form fields go here -->
+
+    <button type="submit">Send</button>
+  </form>
+
 </body>
 </html>
